--- a/html/autora.html
+++ b/html/autora.html
@@ -37,7 +37,8 @@
                         <p> Mineira que começou sua jornada com livros através de poesias na escola primária e se
                             apaixonou por completo por eles quando conheceu os romances aos quatorze anos. </p>
                         <p> Agora, escreve seus próprios e os publica de forma independente. Encontre-me no instagram
-                            <strong> @alineapadua </strong> </p>
+                            <strong> @alineapadua </strong>
+                        </p>
 
                     </div>
                 </div>
@@ -76,6 +77,7 @@
 
 
 
+                
 
                 <div class="slide ativo">
                     <a href="https://https://www.instagram.com/alineapadua/p/DQeZMyDEfhJ/" target="_blank">
@@ -83,167 +85,167 @@
                     <!-- <p>“20 Frase do Livro”</p>  -->
                     <p>OS GEMÊOS REJEITADOS PELO MAFIOSO GREGO</p>
                 </div>
+                <div class="slide ativo">
+                    <a href="https://https://www.instagram.com/alineapadua/p/DQO_vPDEZm6/" target="_blank">
+                        <img src="../ilustra/19.jfif" alt="Imagem 19"> </a>
 
-                <a href="https://https://www.instagram.com/alineapadua/p/DQO_vPDEZm6/" target="_blank">
-                    <img src="../ilustra/19.jfif" alt="Imagem 19"> </a>
+                    <!-- <p>“20 Frase do Livro”</p>  -->
+                    <p>OS GEMÊOS REJEITADOS PELO MAFIOSO GREGO</p>
+                </div>
+                <div class="slide ativo">
+                    <a href="https://www.instagram.com/p/DPe6hggkdEd/?igsh=Z3VyaDhsazdmZHZy" target="_blank">
+                        <img src="../ilustra/18.jfif" alt="Imagem 18">
+                    </a>
+                    <!-- <p>“18 Frase do Livro”</p>  -->
+                    <p>A FALSA NOIVA DO MAFIOSO</p>
+                </div>
 
-                <!-- <p>“20 Frase do Livro”</p>  -->
-                <p>OS GEMÊOS REJEITADOS PELO MAFIOSO GREGO</p>
+                <div class="slide ativo">
+                    <a href="https://www.instagram.com/p/DPbaFDpkfB6/?igsh=MWxqZ255ZHQ1MWhmMA%3D%3D" target="_blank">
+                        <img src="../ilustra/17.jfif" alt="Imagem 17">
+                    </a>
+                    <!-- <p>“17 Frase do Livro”</p>  -->
+                    <p>A FALSA NOIVA DO MAFIOSO</p>
+                </div>
+
+                <div class="slide ativo">
+                    <a href="https://www.instagram.com/p/DPHrOj_EV9D/?igsh=aGNtY3M0eW5pajVs" target="_blank">
+                        <img src="../ilustra/16.jpeg" alt="Imagem 16">
+                    </a>
+                    <!-- <p>“16 Frase do Livro”</p>  -->
+                    <p>TRAÍDA & GRÁVIDA DO CHEFE DA MÁFIA GREGA</p>
+                </div>
+
+                <div class="slide ativo">
+                    <a href="https://www.instagram.com/p/DOgw62PEa9M/?igsh=MWsydHhoMXFuaW54ag%3D%3D" target="_blank">
+                        <img src="../ilustra/15.jpeg" alt="Imagem 15">
+                    </a>
+                    <!-- <p>“15 Frase do Livro”</p>  -->
+                    <p>ESQUECIDA & GRÁVIDA DO MAFIOSO GREGO</p>
+                </div>
+
+
+                <div class="slide ativo">
+                    <a href="https://www.instagram.com/p/DL6EeqmxXT4/" target="_blank">
+                        <img src="../ilustra/14.jpg" alt="Imagem 14">
+                    </a>
+                    <!-- <p>“14 Frase do Livro”</p>  -->
+                    <p>TROCADA PELO CHEFE DA MÁFIA QUE NÃO ME AMA</p>
+                </div>
+
+
+                <div class="slide ativo">
+                    <a href="https://www.instagram.com/p/DJaG8HRxL3i/" target="_blank">
+                        <img src="../ilustra/13.jfif" alt="Imagem 13">
+                    </a>
+                    <!-- <p>“13 Frase do Livro”</p> -->
+                    <p>REJEITADA & CASADA COM O MAFIOSO GREGO: Poseidon (A QUEDA DA MÁFIA GREGA Livro 3)</p>
+                </div>
+
+
+                <div class="slide">
+                    <a href="https://www.instagram.com/p/DHJQgnjs5PZ/" target="_blank">
+                        <img src="../ilustra/12.jfif" alt="Imagem 12">
+                    </a>
+                    <!-- <p>“12 Frase do Livro”</p> -->
+                    <p>ROUBADA NO ALTAR PELO MAFIOSO GREGO: Ares (A QUEDA DA MÁFIA GREGA Livro 2)</p>
+                </div>
+
+
+                <div class="slide">
+                    <a href="https://www.instagram.com/p/DE5ALX3uCvk/" target="_blank">
+                        <img src="../ilustra/11.jfif" alt="Imagem 11">
+                    </a>
+                    <!-- <p>“11 Frase do Livro”</p> -->
+                    <p>UMA FILHA ESCONDIDA DO HERDEIRO DA MÁFIA</p>
+                </div>
+
+
+                <div class="slide">
+                    <a href="https://www.instagram.com/p/DDaeE1NPvjw/" target="_blank">
+                        <img src="../ilustra/10.jfif" alt="Imagem 10">
+                    </a>
+                    <!-- <p>“10 Frase do Livro”</p> -->
+                    <p>UMA FILHA REJEITADA PELO BRAÇO DIREITO DO CARTEL: Abandonada Por Ele (Cartel García Livro 3)</p>
+                </div>
+
+                <div class="slide">
+                    <a href="https://www.instagram.com/p/DDUnwomueas/" target="_blank">
+                        <img src="../ilustra/9.jfif" alt="Imagem 9">
+                    </a>
+                    <!--  <p>“9 Frase do Livro”</p> -->
+                    <p>REJEITADA & CASADA COM O HERDEIRO DA MÁFIA</p>
+                </div>
+
+                <div class="slide">
+                    <a href="https://www.instagram.com/p/DCIAhmwP_YJ/" target="_blank">
+                        <img src="../ilustra/8.jfif" alt="Imagem 8">
+                    </a>
+                    <!-- <p>“8 Frase do Livro”</p> -->
+                    <p>UMA FILHA REJEITADA PELO BRAÇO DIREITO DO CARTEL: Abandonada Por Ele (Cartel García Livro 3) </p>
+                </div>
+
+                <div class="slide">
+                    <a href="https://www.instagram.com/p/DBmgHKLPs-n/" target="_blank">
+                        <img src="../ilustra/7.jfif" alt="Imagem 7">
+                    </a>
+                    <!--  <p>“7 Frase do Livro”</p> -->
+                    <p>UMA FILHA REJEITADA PELO BRAÇO DIREITO DO CARTEL: Abandonada Por Ele (Cartel García Livro 3) </p>
+                </div>
+
+                <div class="slide">
+                    <a href="https://www.instagram.com/p/DBL4zuZubok/" target="_blank">
+                        <img src="../ilustra/6.jfif" alt="Imagem 6">
+                    </a>
+                    <!--  <p>“6 Frase do Livro”</p> -->
+                    <p>UM BEBÊ ESCONDIDO DO CHEFE DO CARTEL: Casada Por Obrigação (Cartel García Livro 2)</p>
+                </div>
+
+
+                <div class="slide">
+                    <a href="https://www.instagram.com/p/C9dnRdEPcNH/" target="_blank">
+                        <img src="../ilustra/5.jfif" alt="Imagem 5">
+                    </a>
+                    <!--   <p>“5 Frase do Livro”</p> -->
+                    <p>TRAÍDA & GRÁVIDA DO MAFIOSO QUE NÃO ME AMA (OS HANSEN Livro 7)</p>
+                </div>
+
+                <div class="slide">
+                    <a href="https://www.instagram.com/p/C8f2KjFM96Q/" target="_blank">
+                        <img src="../ilustra/4.jfif" alt="Imagem 4">
+                    </a>
+                    <!--  <p>“4 Frase do Livro”</p> -->
+                    <p>A BABÁ REJEITADA PELO COWBOY VIÚVO</p>
+                </div>
+
+
+                <div class="slide">
+                    <a href="https://www.instagram.com/p/C7H-V89Pbdo/" target="_blank">
+                        <img src="../ilustra/3.jfif" alt="Imagem 3">
+                    </a>
+                    <!-- <p>“3 Frase do Livro”</p> -->
+                    <p> VENDIDA AO MAFIOSO QUE NÃO ME AMA (OS HANSEN Livro 6) </p>
+                </div>
+
+                <div class="slide">
+                    <a href="https://www.instagram.com/p/C6pTmgFL1Kp/" target="_blank">
+                        <img src="../ilustra/2.jfif" alt="Imagem 2">
+                    </a>
+                    <!-- <p>“2 Frase do Livro”</p> -->
+                    <p>VENDIDA AO MAFIOSO QUE NÃO ME AMA (OS HANSEN Livro 6) </p>
+                </div>
+
+                <div class="slide">
+                    <a href="https://www.instagram.com/p/C513M0nLMbC/" target="_blank">
+                        <img src="../ilustra/1.jfif" alt="Imagem 1">
+                    </a>
+                    <!--  <p>“1 Frase do Livro”</p> -->
+                    <p>GRÁVIDA & DESPREZADA PELO MAFIOSO QUE NÃO ME AMA (OS HANSEN Livro 5)</p>
+                </div>
+
             </div>
-
-            <a href="https://www.instagram.com/p/DPe6hggkdEd/?igsh=Z3VyaDhsazdmZHZy" target="_blank">
-                <img src="../ilustra/18.jfif" alt="Imagem 18">
-            </a>
-            <!-- <p>“18 Frase do Livro”</p>  -->
-            <p>A FALSA NOIVA DO MAFIOSO</p>
-        </div>
-
-        <div class="slide ativo">
-            <a href="https://www.instagram.com/p/DPbaFDpkfB6/?igsh=MWxqZ255ZHQ1MWhmMA%3D%3D" target="_blank">
-                <img src="../ilustra/17.jfif" alt="Imagem 17">
-            </a>
-            <!-- <p>“17 Frase do Livro”</p>  -->
-            <p>A FALSA NOIVA DO MAFIOSO</p>
-        </div>
-
-        <div class="slide ativo">
-            <a href="https://www.instagram.com/p/DPHrOj_EV9D/?igsh=aGNtY3M0eW5pajVs" target="_blank">
-                <img src="../ilustra/16.jpeg" alt="Imagem 16">
-            </a>
-            <!-- <p>“16 Frase do Livro”</p>  -->
-            <p>TRAÍDA & GRÁVIDA DO CHEFE DA MÁFIA GREGA</p>
-        </div>
-
-        <div class="slide ativo">
-            <a href="https://www.instagram.com/p/DOgw62PEa9M/?igsh=MWsydHhoMXFuaW54ag%3D%3D" target="_blank">
-                <img src="../ilustra/15.jpeg" alt="Imagem 15">
-            </a>
-            <!-- <p>“15 Frase do Livro”</p>  -->
-            <p>ESQUECIDA & GRÁVIDA DO MAFIOSO GREGO</p>
-        </div>
-
-
-        <div class="slide ativo">
-            <a href="https://www.instagram.com/p/DL6EeqmxXT4/" target="_blank">
-                <img src="../ilustra/14.jpg" alt="Imagem 14">
-            </a>
-            <!-- <p>“14 Frase do Livro”</p>  -->
-            <p>TROCADA PELO CHEFE DA MÁFIA QUE NÃO ME AMA</p>
-        </div>
-
-
-        <div class="slide ativo">
-            <a href="https://www.instagram.com/p/DJaG8HRxL3i/" target="_blank">
-                <img src="../ilustra/13.jfif" alt="Imagem 13">
-            </a>
-            <!-- <p>“13 Frase do Livro”</p> -->
-            <p>REJEITADA & CASADA COM O MAFIOSO GREGO: Poseidon (A QUEDA DA MÁFIA GREGA Livro 3)</p>
-        </div>
-
-
-        <div class="slide">
-            <a href="https://www.instagram.com/p/DHJQgnjs5PZ/" target="_blank">
-                <img src="../ilustra/12.jfif" alt="Imagem 12">
-            </a>
-            <!-- <p>“12 Frase do Livro”</p> -->
-            <p>ROUBADA NO ALTAR PELO MAFIOSO GREGO: Ares (A QUEDA DA MÁFIA GREGA Livro 2)</p>
-        </div>
-
-
-        <div class="slide">
-            <a href="https://www.instagram.com/p/DE5ALX3uCvk/" target="_blank">
-                <img src="../ilustra/11.jfif" alt="Imagem 11">
-            </a>
-            <!-- <p>“11 Frase do Livro”</p> -->
-            <p>UMA FILHA ESCONDIDA DO HERDEIRO DA MÁFIA</p>
-        </div>
-
-
-        <div class="slide">
-            <a href="https://www.instagram.com/p/DDaeE1NPvjw/" target="_blank">
-                <img src="../ilustra/10.jfif" alt="Imagem 10">
-            </a>
-            <!-- <p>“10 Frase do Livro”</p> -->
-            <p>UMA FILHA REJEITADA PELO BRAÇO DIREITO DO CARTEL: Abandonada Por Ele (Cartel García Livro 3)</p>
-        </div>
-
-        <div class="slide">
-            <a href="https://www.instagram.com/p/DDUnwomueas/" target="_blank">
-                <img src="../ilustra/9.jfif" alt="Imagem 9">
-            </a>
-            <!--  <p>“9 Frase do Livro”</p> -->
-            <p>REJEITADA & CASADA COM O HERDEIRO DA MÁFIA</p>
-        </div>
-
-        <div class="slide">
-            <a href="https://www.instagram.com/p/DCIAhmwP_YJ/" target="_blank">
-                <img src="../ilustra/8.jfif" alt="Imagem 8">
-            </a>
-            <!-- <p>“8 Frase do Livro”</p> -->
-            <p>UMA FILHA REJEITADA PELO BRAÇO DIREITO DO CARTEL: Abandonada Por Ele (Cartel García Livro 3) </p>
-        </div>
-
-        <div class="slide">
-            <a href="https://www.instagram.com/p/DBmgHKLPs-n/" target="_blank">
-                <img src="../ilustra/7.jfif" alt="Imagem 7">
-            </a>
-            <!--  <p>“7 Frase do Livro”</p> -->
-            <p>UMA FILHA REJEITADA PELO BRAÇO DIREITO DO CARTEL: Abandonada Por Ele (Cartel García Livro 3) </p>
-        </div>
-
-        <div class="slide">
-            <a href="https://www.instagram.com/p/DBL4zuZubok/" target="_blank">
-                <img src="../ilustra/6.jfif" alt="Imagem 6">
-            </a>
-            <!--  <p>“6 Frase do Livro”</p> -->
-            <p>UM BEBÊ ESCONDIDO DO CHEFE DO CARTEL: Casada Por Obrigação (Cartel García Livro 2)</p>
-        </div>
-
-
-        <div class="slide">
-            <a href="https://www.instagram.com/p/C9dnRdEPcNH/" target="_blank">
-                <img src="../ilustra/5.jfif" alt="Imagem 5">
-            </a>
-            <!--   <p>“5 Frase do Livro”</p> -->
-            <p>TRAÍDA & GRÁVIDA DO MAFIOSO QUE NÃO ME AMA (OS HANSEN Livro 7)</p>
-        </div>
-
-        <div class="slide">
-            <a href="https://www.instagram.com/p/C8f2KjFM96Q/" target="_blank">
-                <img src="../ilustra/4.jfif" alt="Imagem 4">
-            </a>
-            <!--  <p>“4 Frase do Livro”</p> -->
-            <p>A BABÁ REJEITADA PELO COWBOY VIÚVO</p>
-        </div>
-
-
-        <div class="slide">
-            <a href="https://www.instagram.com/p/C7H-V89Pbdo/" target="_blank">
-                <img src="../ilustra/3.jfif" alt="Imagem 3">
-            </a>
-            <!-- <p>“3 Frase do Livro”</p> -->
-            <p> VENDIDA AO MAFIOSO QUE NÃO ME AMA (OS HANSEN Livro 6) </p>
-        </div>
-
-        <div class="slide">
-            <a href="https://www.instagram.com/p/C6pTmgFL1Kp/" target="_blank">
-                <img src="../ilustra/2.jfif" alt="Imagem 2">
-            </a>
-            <!-- <p>“2 Frase do Livro”</p> -->
-            <p>VENDIDA AO MAFIOSO QUE NÃO ME AMA (OS HANSEN Livro 6) </p>
-        </div>
-
-        <div class="slide">
-            <a href="https://www.instagram.com/p/C513M0nLMbC/" target="_blank">
-                <img src="../ilustra/1.jfif" alt="Imagem 1">
-            </a>
-            <!--  <p>“1 Frase do Livro”</p> -->
-            <p>GRÁVIDA & DESPREZADA PELO MAFIOSO QUE NÃO ME AMA (OS HANSEN Livro 5)</p>
-        </div>
-
-        </div>
-        <button class="carrossel-btn anterior">&#10094;</button>
-        <button class="carrossel-btn proximo">&#10095;</button>
+            <button class="carrossel-btn anterior">&#10094;</button>
+            <button class="carrossel-btn proximo">&#10095;</button>
         </div>
 
     </main>
