--- a/html/autora.html
+++ b/html/autora.html
@@ -80,13 +80,13 @@
                 
 
                 <div class="slide ativo">
-                    <a href="https://https://www.instagram.com/alineapadua/p/DQeZMyDEfhJ/" target="_blank">
+                    <a href="https://www.instagram.com/alineapadua/p/DQeZMyDEfhJ/" target="_blank">
                         <img src="../ilustra/20.jfif" alt="Imagem 20"> </a>
                     <!-- <p>“20 Frase do Livro”</p>  -->
                     <p>OS GEMÊOS REJEITADOS PELO MAFIOSO GREGO</p>
                 </div>
                 <div class="slide ativo">
-                    <a href="https://https://www.instagram.com/alineapadua/p/DQO_vPDEZm6/" target="_blank">
+                    <a href="https://www.instagram.com/alineapadua/p/DQO_vPDEZm6/" target="_blank">
                         <img src="../ilustra/19.jfif" alt="Imagem 19"> </a>
 
                     <!-- <p>“20 Frase do Livro”</p>  -->
@@ -321,3 +321,4 @@
 </body>
 
 </html>
+
